--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="dbApp">
+<html ng-app="starter">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
@@ -23,7 +23,7 @@
     }
     </style>
   </head>
-  <body define-app="dbApp" ng-controller="RootCtrl" class="theme-blue">
+  <body define-app="starter" ng-controller="RootCtrl" class="theme-blue">
     <div class="statusbar-overlay"></div>
     <div class="panel-overlay"></div>
     <div class="panel panel-left panel-cover" define-left-panel="leftPanel">
