added framework7 provider method for instantiation

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         <!--~!script-services!~-->
         <!--~!script-filters!~-->
         <!--~!script-factories!~-->
+		<script type='text/javascript' src='/src/factories/framework7.factory.js'></script>
 		<script type='text/javascript' src='/src/factories/extends.factory.js'></script>
     </body>
 </html>
