Upgraded the Framework7 library and mappings. Restructured the folder #18

--- a/kitchen-sink-material/index.html
+++ b/kitchen-sink-material/index.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="theme-color" content="#2196f3">
     <title>Framework7 Material</title>
-    <link rel="stylesheet" href="../build/css/framework7.material.css">
-    <link rel="stylesheet" href="../build/css/framework7.material.colors.css">
+    <link rel="stylesheet" href="../bower_components/framework7/dist/css/framework7.material.css">
+    <link rel="stylesheet" href="../bower_components/framework7/dist/css/framework7.material.colors.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/kitchen-sink.css">
     <link rel="icon" href="img/icon.png">
@@ -182,8 +182,8 @@
     </div>
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="../build/js/framework7.js"></script>
-    <script type="text/javascript" src="js/framework7.angular.hook.js"></script>
+    <script type="text/javascript" src="../bower_components/framework7/dist/js/framework7.js"></script>
+    <script type="text/javascript" src="../dist/framework7.angular.hook.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
